# MVM

./: CMakeLists.txt  README.md
source/: attributes.cpp  attributes.hpp  classfile.cpp  classfile.hpp  constantPoolTypes.hpp  definitions.hpp  engine.cpp  engine.hpp  loader.cpp  loader.hpp  memory.cpp  memory.hpp
source/entryPoint/: java.cpp
source/jar/: jar.cpp  jar.hpp
source/native/: CMakeLists.txt  nativeBus.h  nativeLibrary.cpp  nativeLibrary.hpp
source/native/System/: System.cpp
source/runtime/: AccessFlag.java  AccessFlags.java  BString.java  Boiler.java  CMakeLists.txt  Class.java  ClassHeader.java  ClassLink.java  DataPool.java  DataPoolType.java  DataPoolTypes.java  Field.java  FieldLink.java  Fields.java  FileHandler.java  Interfaces.java  List.java  Memory.java  Method.java  MethodLink.java  Methods.java  NameAndType.java  NativeLibrary.java  Node.java  Object.java  RandomAccessFile.java  ResizableArray.java  String.java  System.java  TypeMetadata.java
test/: endTest.cpp  jarTest.cpp  mainTest.cpp  runtimeLoadTest.cpp
test/jar/: MANIFEST.MF  Object.java
